Fix menu visibility

--- a/css/common.css
+++ b/css/common.css
@@ -240,7 +240,6 @@ h1, h2, h3, h4, h5, h6, span, p { font-family: 'Open Sans', Arial, 'Helvetice Ne
 
 .dropdown {
   float: left;
-  overflow: hidden;
 }
 
 .dropdown .dropbtn {
@@ -256,11 +255,11 @@ h1, h2, h3, h4, h5, h6, span, p { font-family: 'Open Sans', Arial, 'Helvetice Ne
 
 .dropdown-content {
   display: none;
-  position: absolute;
+  position: fixed;
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  z-index: 9999;
 }
 
 .dropdown-content a {
